--- a/index.html
+++ b/index.html
@@ -42,3 +42,153 @@
                 </div>
             </div>
         </nav>
+        <!-- Slider start -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active panda-bg-info p-5 border rounded ">
+                        <div class="row align-items-center">
+                            <div class="col-lg-7">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world</p>
+                                    <h1>$420</h1>
+                                    <div class=" btn panda-btn-buy-now">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item panda-bg-info p-5 border rounded ">
+                        <div class="row align-items-center">
+                            <div class="col-lg-7">
+                                <div>
+                                    <h2>Mega LCD TV for Sports</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world</p>
+                                    <h1>$1200</h1>
+                                    <div class=" btn panda-btn-buy-now">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item panda-bg-info p-5 border rounded ">
+                        <div class="row align-items-center">
+                            <div class="col-lg-7">
+                                <div>
+                                    <h2>X-Box for your Living Room</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world</p>
+                                    <h1>$600</h1>
+                                    <div class=" btn panda-btn-buy-now">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
+        </section>
+        <!-- slider end -->
+    </header>
+    <main>
+        <!-- categories start -->
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2 categories">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-success d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+
+        <!-- categories end -->
+        <!-- shoes start -->
+        <section class="container my-5" id="shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg border border-0 h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h5>$120</h5>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg border border-0 h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h5>$320</h5>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg border border-0 h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h5>$350</h5>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes end -->
