--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
