--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <div class="mb-3">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+                    <button type="submit" class="btn panda-btn-buy-now" id="btn-email" disabled>Submit</button>
                 </form>
             </div>
         </section>
